# saferplaces-multiagent

./: .dockerignore  .gitignore  Dockerfile  README.md  T004_VERIFICATION_STATUS.md  __run_flask.bat  __run_langgraph.bat  coding-prompts.md  docker-compose.yml  multiagent-analysis-post-PLN013.md  multiagent-guidlines-pt2.md  multiagent-guidlines-tools.md  multiagent-guidlines.md  multiagent-review.md  multiagent-summary.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: sp-planner.agent.md
.github/instructions/: coding-standards.instructions.md  docs.instructions.md  planning.instructions.md  services.instructions.md
.github/prompts/: T-004-A.prompt.md  T-004-B.prompt.md  T-004-C.prompt.md  T-004-D.prompt.md  T-004-E.prompt.md
_pj/: test-ma-01.ipynb  test-ma-01.md  test-ma-01.py
_pj/result/: test-ma-01-custom-1.json  test-ma-01.json
docs/: architecture.md  functional-spec-graph.md  functional-spec-map.md  functional-spec-services.md  functional-spec.md  graph-bug-report.md  index.md  layer-shape-context-injection.md  map-agent-prompts-refactor.md  prompt-architecture.md  prompt-refactor-status.md  prompt-refinement-proposals.md  prompts-inventory.md
implementations/: PLN-001.md  PLN-003.md  PLN-007-graph-trivial-fixes.md  PLN-008-graph-control-flow-fixes.md  PLN-009-mid-plan-interrupt.md  PLN-011-graph-bug-fixes.md  PLN-013-agent-intelligence-reform.md  PLN-016-supervisor-prompts-architecture.md  _plan-todo.md
implementations/archive/: PLN-001-report.md  (+5 more)
tests/: T001.py  T002.py  T006_prompt_override.py  T007_map_agent.py  _utils.py  improvments.md  run.py  tests.json
(+134 files in other folders)
